# LEARN_Assignment1

./: CMakeLists.txt  DavideVitagliano904120.md  README.md  main.cpp  page_rank.cpp  page_rank.h  page_rank_sequential.cpp  page_rank_sequential.h
performance/: ER-AvgDeg10-100K-L2-speedup.csv  MANN-a81-speedup.csv  Wiki-Vote-speedup.csv  bio-human-gene2-speedup.csv  ca-citeseer-speedup.csv  co-papers-citeseer-speedup.csv  p2p-Gnutella25-speedup.csv  rec-movielens-speedup.csv  speedups.csv  times.csv  yahoo-msg-speedup.csv
performance/cluster/: ER-AvgDeg10-100K-L2-speedup.csv  Wiki-Vote-speedup.csv  bio-human-gene2-speedup.csv  co-papers-citeseer-speedup.csv  p2p-Gnutella25-speedup.csv  yahoo-msg-speedup.csv
performance/local/: ER-AvgDeg10-100K-L2-speedup.csv  MANN-a81-speedup.csv  Wiki-Vote-speedup.csv  bio-human-gene2-speedup.csv  p2p-Gnutella25-speedup.csv  rec-movielens-speedup.csv  yahoo-msg-speedup.csv
